Upgrade to Gradle 6.6.1
And remove the special handling code to work with Java 14 since it is now supported by Gradle